Add clients info

--- a/docs/clients-overview.mdx
+++ b/docs/clients-overview.mdx
@@ -3,8 +3,31 @@ id: clientsOverview
 slug: /vector-gen-ai/clients-overview
 title: ((es)) programming language clients
 image:
-description: ((es)) programming language clients
+description: Learn about ((es)) programming language clients
 date: 2023-09-07
 tags: ['[]']
 related: ['[]']
 ---
+
+Elasticsearch supports a number of REST clients for different languages.
+
+- Python: [view official docs](https://elasticsearch-py.readthedocs.io/en/master/)
+- Javascript: [view official docs](https://www.elastic.co/guide/en/elasticsearch/client/javascript-api/current/getting-started-js.html)
+
+For other clients, see our [Client Libraries](https://www.elastic.co/guide/en/elasticsearch/client/index.html).
+
+<DocCallOut title="">
+    ℹ️ Because ML and Generative AI are strongly Python-based, our examples focus on the Python client.
+    Our interactive notebooks also use the Python client.
+</DocCallOut>
+
+<DocRelatedArticles
+  sectionTitle="Get started"
+  items={
+    [
+      {
+        "pageId": "clientsPython"
+      }
+    ]
+  }
+/>
