Update 03-ELSER.ipynb: Fix wrong lookup
Fix lookup of field that failed because https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/notebooks/search/movies.json does not contain `text` but only the `field` plot

--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -427,8 +427,8 @@
     "    doc_id = hit['_id']\n",
     "    score = hit['_score']\n",
     "    title = hit['_source']['title']\n",
-    "    text = hit['_source']['text']\n",
-    "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {text}\\n\")"
+    "    plot = hit['_source']['plot']\n",
+    "    print(f\"Score: {score}\\nTitle: {title}\\nPlot: {plot}\\n\")"
    ]
   }
  ],
