--- a/notebooks/search/04-multilingual.ipynb
+++ b/notebooks/search/04-multilingual.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Multilingual semantic search\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/04-multilingual.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/search/04-multilingual.ipynb)\n",
     "\n",
     "In this example we'll use a multilingual embedding model\n",
     "[multilingual-e5-base](https://huggingface.co/intfloat/multilingual-e5-base) to perform search on a toy dataset of mixed\n",
