--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -24,7 +24,7 @@
       "source": [
         "## Create Elastic Cloud deployment\n",
         "\n",
-        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial.\n",
+        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
         "\n",
         "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
         "   - Select **Create deployment**"
