--- a/supporting-blog-content/multilingual-e5/multilingual-e5.ipynb
+++ b/supporting-blog-content/multilingual-e5/multilingual-e5.ipynb
@@ -26,7 +26,7 @@
         "For this example, you will need:\n",
         "\n",
         "- An Elastic Cloud deployment with an ML node (min. 8 GB memory)\n",
-        "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?elektra=en-ess-sign-up-page))\n"
+        "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook?elektra=en-ess-sign-up-page))\n"
       ]
     },
     {
@@ -37,7 +37,7 @@
       "source": [
         "## Create Elastic Cloud deployment\n",
         "\n",
-        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial.\n",
+        "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook) for a free trial.\n",
         "\n",
         "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
         "   - Select **Create deployment**\n",
