Review: remove fromUI and elektra

--- a/notebooks/search/04-multilingual.ipynb
+++ b/notebooks/search/04-multilingual.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "- Python 3.6 or later\n",
     "- An Elastic deployment with minimum **4GB machine learning node**\n",
-    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook?elektra=en-ess-sign-up-page))\n",
+    "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n",
     "- The [Elastic Python client](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/installation.html)\n"
    ]
   },
