--- a/supporting-blog-content/multilingual-e5/multilingual-e5.ipynb
+++ b/supporting-blog-content/multilingual-e5/multilingual-e5.ipynb
@@ -26,7 +26,7 @@
         "For this example, you will need:\n",
         "\n",
         "- An Elastic Cloud deployment with an ML node (min. 8 GB memory)\n",
-        "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook?elektra=en-ess-sign-up-page))\n"
+        "   - We'll be using [Elastic Cloud](https://www.elastic.co/guide/en/cloud/current/ec-getting-started.html) for this example (available with a [free trial](https://cloud.elastic.co/registration?utm_source=github&utm_content=elasticsearch-labs-notebook))\n"
       ]
     },
     {
@@ -464,7 +464,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.4 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -477,7 +478,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.11.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+      }
     }
   },
   "nbformat": 4,
