Applied PR Feedback

--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -27,7 +27,7 @@
         "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial.\n",
         "\n",
         "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-        "   - Select **Create deployment**"
+        "   - Select **Create deployment** and create a deployment with Elasticsearch 8.10.0 or newer"
       ]
     },
     {
@@ -55,7 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install -qU elasticsearch sentence-transformers==2.2.2"
+        "!pip install -qU elasticsearch"
       ]
     },
     {
@@ -210,13 +210,17 @@
       "id": "985c9992",
       "metadata": {},
       "source": [
-        "First, let's search our data for a reliable wireless charger. (We'll include a `pretty_response` function to make hard-to-read json output more readable)."
+        "## Search the test data\n",
+        "\n",
+        "First, let's search our data for a reliable wireless charger.\n",
+        "\n",
+        "Before we search our data, we'll define some convenience functions to output the raw JSON responses from Elasticsearch into more human-readable format."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "ed5c572a",
+      "id": "54b40035",
       "metadata": {},
       "outputs": [],
       "source": [
@@ -233,6 +237,29 @@
         "        pretty_output = (f\"\\nID: {id}\\nName: {name}\\nDescription: {description}\\nPrice: {price}\\nCurrency: {currency}\\nPlug type: {plug_type}\\nVoltage: {voltage}\\nScore: {score}\")\n",
         "        print(pretty_output)\n",
         "\n",
+        "def pretty_ruleset(response):\n",
+        "    print(\"Ruleset ID: \" + response['ruleset_id'])\n",
+        "    for rule in response['rules']:\n",
+        "        rule_id = rule['rule_id']\n",
+        "        type = rule['type']\n",
+        "        print(f\"\\nRule ID: {rule_id}\\n\\tType: {type}\\n\\tCriteria:\")\n",
+        "        criteria = rule['criteria']\n",
+        "        for rule_criteria in criteria:\n",
+        "            criteria_type = rule_criteria['type']\n",
+        "            metadata = rule_criteria['metadata']\n",
+        "            values = rule_criteria['values']\n",
+        "            print(f\"\\t\\t{metadata} {criteria_type} {values}\")\n",
+        "        ids = rule['actions']['ids']\n",
+        "        print(f\"\\tPinned ids: {ids}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ed5c572a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "response = client.search(index=\"products_index\", body={\n",
         "    \"query\": {\n",
         "      \"multi_match\": {\n",
@@ -340,21 +367,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def pretty_ruleset(response):\n",
-        "    print(\"Ruleset ID: \" + response['ruleset_id'])\n",
-        "    for rule in response['rules']:\n",
-        "        rule_id = rule['rule_id']\n",
-        "        type = rule['type']\n",
-        "        print(f\"\\nRule ID: {rule_id}\\n\\tType: {type}\\n\\tCriteria:\")\n",
-        "        criteria = rule['criteria']\n",
-        "        for rule_criteria in criteria:\n",
-        "            criteria_type = rule_criteria['type']\n",
-        "            metadata = rule_criteria['metadata']\n",
-        "            values = rule_criteria['values']\n",
-        "            print(f\"\\t\\t{metadata} {criteria_type} {values}\")\n",
-        "        ids = rule['actions']['ids']\n",
-        "        print(f\"\\tPinned ids: {ids}\")\n",
-        "        \n",
+        "\n",
         "response = client.query_ruleset.get(ruleset_id=\"promotion-rules\")\n",
         "pretty_ruleset(response)"
       ]
@@ -406,7 +419,150 @@
       "id": "ac053cf3",
       "metadata": {},
       "source": [
-        "Now, the rule query boosts the documents that we want to be displayed first!"
+        "The rule query boosts the documents that we want to be displayed first.\n",
+        "\n",
+        "Note that all criteria in a rule must match in order for a rule to be applied. If we update the `country` to be \"ca\" for example, neither query rule will be applied and we will return the organic, unmodified result set."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f177d9fa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "response = client.search(index=\"products_index\", body={\n",
+        "    \"query\": {\n",
+        "        \"rule_query\": {\n",
+        "            \"organic\": {\n",
+        "                \"multi_match\": {\n",
+        "                    \"query\": \"reliable wireless charger for iPhone\",\n",
+        "                    \"fields\": [ \"name^5\", \"description\" ]\n",
+        "                }\n",
+        "            },\n",
+        "            \"match_criteria\": {\n",
+        "              \"my_query\": \"reliable wireless charger for iPhone\",\n",
+        "              \"country\": \"ca\"\n",
+        "            },\n",
+        "            \"ruleset_id\": \"promotion-rules\"\n",
+        "        }\n",
+        "    }\n",
+        "})\n",
+        "\n",
+        "pretty_response(response)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "f6e18f42",
+      "metadata": {},
+      "source": [
+        "It's also possible for multiple rules to apply to a single rule query. Let's update our ruleset, to always pin a promotional result for a pre-order page for our newest model. \n",
+        "\n",
+        "Because rules are applied in order, we'll put the pre-order document at the beginning of the ruleset."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b78b5bda",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "client.query_ruleset.put(ruleset_id=\"promotion-rules\", rules=[\n",
+        "    {\n",
+        "      \"rule_id\": \"preorder\",\n",
+        "      \"type\": \"pinned\",\n",
+        "      \"criteria\": [\n",
+        "        {\n",
+        "          \"type\": \"always\"\n",
+        "        }\n",
+        "      ],\n",
+        "      \"actions\": {\n",
+        "        \"ids\": [\n",
+        "          \"preview1\"\n",
+        "        ]\n",
+        "      }\n",
+        "    },\n",
+        "    {\n",
+        "      \"rule_id\": \"us-charger\",\n",
+        "      \"type\": \"pinned\",\n",
+        "      \"criteria\": [\n",
+        "        {\n",
+        "          \"type\": \"contains\",\n",
+        "          \"metadata\": \"my_query\",\n",
+        "          \"values\": [\"wireless charger\"]\n",
+        "        },\n",
+        "        {\n",
+        "          \"type\": \"exact\",\n",
+        "          \"metadata\": \"country\",\n",
+        "          \"values\": [\"us\"]\n",
+        "        }\n",
+        "      ],\n",
+        "      \"actions\": {\n",
+        "        \"ids\": [\n",
+        "          \"us1\"\n",
+        "        ]\n",
+        "      }\n",
+        "    },\n",
+        "    {\n",
+        "      \"rule_id\": \"uk-charger\",\n",
+        "      \"type\": \"pinned\",\n",
+        "      \"criteria\": [\n",
+        "        {\n",
+        "          \"type\": \"contains\",\n",
+        "          \"metadata\": \"my_query\",\n",
+        "          \"values\": [\"wireless charger\"]\n",
+        "        },\n",
+        "        {\n",
+        "          \"type\": \"exact\",\n",
+        "          \"metadata\": \"country\",\n",
+        "          \"values\": [\"uk\"]\n",
+        "        }\n",
+        "      ],\n",
+        "      \"actions\": {\n",
+        "        \"ids\": [\n",
+        "          \"uk1\"\n",
+        "        ]\n",
+        "      }\n",
+        "    }\n",
+        "  ])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "265501e6",
+      "metadata": {},
+      "source": [
+        "Now, doing a search from the UK will pin the pre-order page first, then pin the UK result second, before returning the organic search results."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b66993ed",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "response = client.search(index=\"products_index\", body={\n",
+        "    \"query\": {\n",
+        "        \"rule_query\": {\n",
+        "            \"organic\": {\n",
+        "                \"multi_match\": {\n",
+        "                    \"query\": \"reliable wireless charger for iPhone\",\n",
+        "                    \"fields\": [ \"name^5\", \"description\" ]\n",
+        "                }\n",
+        "            },\n",
+        "            \"match_criteria\": {\n",
+        "              \"my_query\": \"reliable wireless charger for iPhone\",\n",
+        "              \"country\": \"uk\"\n",
+        "            },\n",
+        "            \"ruleset_id\": \"promotion-rules\"\n",
+        "        }\n",
+        "    }\n",
+        "})\n",
+        "\n",
+        "pretty_response(response)"
       ]
     }
   ],
