Hide pretty print code

--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -221,7 +221,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "54b40035",
-      "metadata": {},
+      "metadata": {
+        "source_hidden": true
+      },
       "outputs": [],
       "source": [
         "def pretty_response(response):\n",
