Remove body from client request

--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -262,12 +262,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "response = client.search(index=\"products_index\", body={\n",
-        "    \"query\": {\n",
-        "      \"multi_match\": {\n",
-        "          \"query\": \"reliable wireless charger for iPhone\",\n",
-        "          \"fields\": [ \"name^5\", \"description\" ]\n",
-        "      }\n",
+        "response = client.search(index=\"products_index\", query={\n",
+        "    \"multi_match\": {\n",
+        "        \"query\": \"reliable wireless charger for iPhone\",\n",
+        "        \"fields\": [ \"name^5\", \"description\" ]\n",
         "    }\n",
         "})\n",
         "\n",
@@ -395,22 +393,20 @@
       },
       "outputs": [],
       "source": [
-        "response = client.search(index=\"products_index\", body={\n",
-        "    \"query\": {\n",
-        "        \"rule_query\": {\n",
-        "            \"organic\": {\n",
-        "                \"multi_match\": {\n",
-        "                    \"query\": \"reliable wireless charger for iPhone\",\n",
-        "                    \"fields\": [ \"name^5\", \"description\" ]\n",
-        "                }\n",
-        "            },\n",
-        "            \"match_criteria\": {\n",
-        "              \"my_query\": \"reliable wireless charger for iPhone\",\n",
-        "              \"country\": \"us\"\n",
-        "            },\n",
-        "            \"ruleset_id\": \"promotion-rules\"\n",
-        "        }\n",
-        "    }\n",
+        "response = client.search(index=\"products_index\", query={\n",
+        "      \"rule_query\": {\n",
+        "          \"organic\": {\n",
+        "              \"multi_match\": {\n",
+        "                  \"query\": \"reliable wireless charger for iPhone\",\n",
+        "                  \"fields\": [ \"name^5\", \"description\" ]\n",
+        "              }\n",
+        "          },\n",
+        "          \"match_criteria\": {\n",
+        "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
+        "            \"country\": \"us\"\n",
+        "          },\n",
+        "          \"ruleset_id\": \"promotion-rules\"\n",
+        "      }\n",
         "})\n",
         "\n",
         "pretty_response(response)"
@@ -433,22 +429,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "response = client.search(index=\"products_index\", body={\n",
-        "    \"query\": {\n",
-        "        \"rule_query\": {\n",
-        "            \"organic\": {\n",
-        "                \"multi_match\": {\n",
-        "                    \"query\": \"reliable wireless charger for iPhone\",\n",
-        "                    \"fields\": [ \"name^5\", \"description\" ]\n",
-        "                }\n",
-        "            },\n",
-        "            \"match_criteria\": {\n",
-        "              \"my_query\": \"reliable wireless charger for iPhone\",\n",
-        "              \"country\": \"ca\"\n",
-        "            },\n",
-        "            \"ruleset_id\": \"promotion-rules\"\n",
-        "        }\n",
-        "    }\n",
+        "response = client.search(index=\"products_index\", query={\n",
+        "      \"rule_query\": {\n",
+        "          \"organic\": {\n",
+        "              \"multi_match\": {\n",
+        "                  \"query\": \"reliable wireless charger for iPhone\",\n",
+        "                  \"fields\": [ \"name^5\", \"description\" ]\n",
+        "              }\n",
+        "          },\n",
+        "          \"match_criteria\": {\n",
+        "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
+        "            \"country\": \"ca\"\n",
+        "          },\n",
+        "          \"ruleset_id\": \"promotion-rules\"\n",
+        "      }\n",
         "})\n",
         "\n",
         "pretty_response(response)"
@@ -546,22 +540,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "response = client.search(index=\"products_index\", body={\n",
-        "    \"query\": {\n",
-        "        \"rule_query\": {\n",
-        "            \"organic\": {\n",
-        "                \"multi_match\": {\n",
-        "                    \"query\": \"reliable wireless charger for iPhone\",\n",
-        "                    \"fields\": [ \"name^5\", \"description\" ]\n",
-        "                }\n",
-        "            },\n",
-        "            \"match_criteria\": {\n",
-        "              \"my_query\": \"reliable wireless charger for iPhone\",\n",
-        "              \"country\": \"uk\"\n",
-        "            },\n",
-        "            \"ruleset_id\": \"promotion-rules\"\n",
-        "        }\n",
-        "    }\n",
+        "response = client.search(index=\"products_index\", query={\n",
+        "      \"rule_query\": {\n",
+        "          \"organic\": {\n",
+        "              \"multi_match\": {\n",
+        "                  \"query\": \"reliable wireless charger for iPhone\",\n",
+        "                  \"fields\": [ \"name^5\", \"description\" ]\n",
+        "              }\n",
+        "          },\n",
+        "          \"match_criteria\": {\n",
+        "            \"my_query\": \"reliable wireless charger for iPhone\",\n",
+        "            \"country\": \"uk\"\n",
+        "          },\n",
+        "          \"ruleset_id\": \"promotion-rules\"\n",
+        "      }\n",
         "})\n",
         "\n",
         "pretty_response(response)"
