--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -27,7 +27,7 @@
         "If you don't have an Elastic Cloud deployment, sign up [here](https://cloud.elastic.co/registration?fromURI=%2Fhome) for a free trial.\n",
         "\n",
         "- Go to the [Create deployment](https://cloud.elastic.co/deployments/create) page\n",
-        "   - Select **Create deployment** and create a deployment with Elasticsearch 8.10.0 or newer"
+        "   - Select **Create deployment** and create a deployment with Elasticsearch **8.10.0** or newer"
       ]
     },
     {
@@ -72,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 3,
       "id": "f38e0397",
       "metadata": {
         "colab": {
@@ -81,16 +81,7 @@
         "id": "f38e0397",
         "outputId": "ad6df489-d242-4229-a42a-39c5ca19d124"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Elastic Cloud ID··········\n",
-            "Elastic Password··········\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from elasticsearch import Elasticsearch\n",
         "from getpass import getpass\n",
@@ -127,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 4,
       "id": "25c618eb",
       "metadata": {
         "colab": {
@@ -141,7 +132,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'name': 'instance-0000000000', 'cluster_name': '1a56ad21587c44d3930932eb9fa1d8e8', 'cluster_uuid': 'gX4zlwtlR4qhZpp1SPm4Yg', 'version': {'number': '8.8.2', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '98e1271edf932a480e4262a471281f1ee295ce6b', 'build_date': '2023-06-26T05:16:16.196344851Z', 'build_snapshot': False, 'lucene_version': '9.6.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
+            "{'name': 'instance-0000000000', 'cluster_name': 'be25ebdadeef4648b60bccefebfe2585', 'cluster_uuid': '07B8b-p3SgaOydWFX7uC0w', 'version': {'number': '8.10.0', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'e338da74c79465dfdc204971e600342b0aa87b6b', 'build_date': '2023-09-07T08:16:21.960703010Z', 'build_snapshot': False, 'lucene_version': '9.7.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'}\n"
           ]
         }
       ],
@@ -184,12 +175,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "008d723e",
       "metadata": {
         "id": "008d723e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'errors': False, 'took': 5, 'items': [{'index': {'_index': 'products_index', '_id': 'us1', '_version': 5, 'result': 'updated', '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 14, '_primary_term': 2, 'status': 200}}, {'index': {'_index': 'products_index', '_id': 'uk1', '_version': 5, 'result': 'updated', '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 15, '_primary_term': 2, 'status': 200}}, {'index': {'_index': 'products_index', '_id': 'eu1', '_version': 5, 'result': 'updated', '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 16, '_primary_term': 2, 'status': 200}}, {'index': {'_index': 'products_index', '_id': 'preview1', '_version': 3, 'result': 'updated', '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 17, '_primary_term': 2, 'status': 200}}]})"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import json\n",
         "from urllib.request import urlopen\n",
@@ -219,7 +221,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "54b40035",
       "metadata": {
         "source_hidden": true
@@ -256,11 +258,62 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "id": "cdfa3ad0",
+      "metadata": {},
+      "source": [
+        "Next, do the search:"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "ed5c572a",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "ID: eu1\n",
+            "Name: PureJuice Pro - Wireless Charger suitable for European plugs\n",
+            "Description: PureJuice Pro: Elevating wireless charging. Combining unparalleled charging speeds with elegant design, it promises both rapid and dependable energy for your devices. Embrace the future of wireless charging.\n",
+            "Price: 18.0\n",
+            "Currency: EUR\n",
+            "Plug type: C\n",
+            "Voltage: 230V\n",
+            "Score: 14.5004\n",
+            "\n",
+            "ID: preview1\n",
+            "Name: PureJuice Pro - Pre-order next version\n",
+            "Description: Newest version of the PureJuice Pro wireless charger, coming soon! The newest model of the PureJuice Pro boasts a 2x faster charge than the current model, and a sturdier cable with an eighteen month full warranty. We also have a battery backup to charge on-the-go, up to two full charges. Pre-order yours today!\n",
+            "Price: 36.0\n",
+            "Currency: USD\n",
+            "Plug type: ['B', 'C', 'G']\n",
+            "Voltage: ['230V', '120V']\n",
+            "Score: 1.0668641\n",
+            "\n",
+            "ID: us1\n",
+            "Name: PureJuice Pro\n",
+            "Description: PureJuice Pro: Experience the pinnacle of wireless charging. Blending rapid charging tech with sleek design, it ensures your devices are powered swiftly and safely. The future of charging is here.\n",
+            "Price: 15.0\n",
+            "Currency: USD\n",
+            "Plug type: B\n",
+            "Voltage: 120v\n",
+            "Score: 0.11306982\n",
+            "\n",
+            "ID: uk1\n",
+            "Name: PureJuice Pro - UK Compatible\n",
+            "Description: PureJuice Pro: Redefining wireless charging. Seamlessly merging swift charging capabilities with a refined aesthetic, it guarantees your devices receive rapid and secure power. Welcome to the next generation of charging.\n",
+            "Price: 20.0\n",
+            "Currency: GBP\n",
+            "Plug type: G\n",
+            "Voltage: 230V\n",
+            "Score: 0.11306982\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(index=\"products_index\", query={\n",
         "    \"multi_match\": {\n",
@@ -296,10 +349,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "b109d45d",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'result': 'updated'})"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "client.query_ruleset.put(ruleset_id=\"promotion-rules\", rules=[\n",
         "    {\n",
@@ -362,12 +426,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "dcda4989",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ruleset ID: promotion-rules\n",
+            "\n",
+            "Rule ID: us-charger\n",
+            "\tType: pinned\n",
+            "\tCriteria:\n",
+            "\t\tmy_query contains ['wireless charger']\n",
+            "\t\tcountry exact ['us']\n",
+            "\tPinned ids: ['us1']\n",
+            "\n",
+            "Rule ID: uk-charger\n",
+            "\tType: pinned\n",
+            "\tCriteria:\n",
+            "\t\tmy_query contains ['wireless charger']\n",
+            "\t\tcountry exact ['uk']\n",
+            "\tPinned ids: ['uk1']\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
         "response = client.query_ruleset.get(ruleset_id=\"promotion-rules\")\n",
         "pretty_ruleset(response)"
       ]
@@ -382,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "Df7hwcIjYwMT",
       "metadata": {
         "colab": {
@@ -391,7 +476,50 @@
         "id": "Df7hwcIjYwMT",
         "outputId": "e63884d7-d4a5-4f5d-ea43-fc2f0793f040"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "ID: us1\n",
+            "Name: PureJuice Pro\n",
+            "Description: PureJuice Pro: Experience the pinnacle of wireless charging. Blending rapid charging tech with sleek design, it ensures your devices are powered swiftly and safely. The future of charging is here.\n",
+            "Price: 15.0\n",
+            "Currency: USD\n",
+            "Plug type: B\n",
+            "Voltage: 120v\n",
+            "Score: 1.7014122e+38\n",
+            "\n",
+            "ID: eu1\n",
+            "Name: PureJuice Pro - Wireless Charger suitable for European plugs\n",
+            "Description: PureJuice Pro: Elevating wireless charging. Combining unparalleled charging speeds with elegant design, it promises both rapid and dependable energy for your devices. Embrace the future of wireless charging.\n",
+            "Price: 18.0\n",
+            "Currency: EUR\n",
+            "Plug type: C\n",
+            "Voltage: 230V\n",
+            "Score: 14.5004\n",
+            "\n",
+            "ID: preview1\n",
+            "Name: PureJuice Pro - Pre-order next version\n",
+            "Description: Newest version of the PureJuice Pro wireless charger, coming soon! The newest model of the PureJuice Pro boasts a 2x faster charge than the current model, and a sturdier cable with an eighteen month full warranty. We also have a battery backup to charge on-the-go, up to two full charges. Pre-order yours today!\n",
+            "Price: 36.0\n",
+            "Currency: USD\n",
+            "Plug type: ['B', 'C', 'G']\n",
+            "Voltage: ['230V', '120V']\n",
+            "Score: 1.0668641\n",
+            "\n",
+            "ID: uk1\n",
+            "Name: PureJuice Pro - UK Compatible\n",
+            "Description: PureJuice Pro: Redefining wireless charging. Seamlessly merging swift charging capabilities with a refined aesthetic, it guarantees your devices receive rapid and secure power. Welcome to the next generation of charging.\n",
+            "Price: 20.0\n",
+            "Currency: GBP\n",
+            "Plug type: G\n",
+            "Voltage: 230V\n",
+            "Score: 0.11306982\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(index=\"products_index\", query={\n",
         "      \"rule_query\": {\n",
@@ -424,10 +552,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "f177d9fa",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "ID: eu1\n",
+            "Name: PureJuice Pro - Wireless Charger suitable for European plugs\n",
+            "Description: PureJuice Pro: Elevating wireless charging. Combining unparalleled charging speeds with elegant design, it promises both rapid and dependable energy for your devices. Embrace the future of wireless charging.\n",
+            "Price: 18.0\n",
+            "Currency: EUR\n",
+            "Plug type: C\n",
+            "Voltage: 230V\n",
+            "Score: 14.5004\n",
+            "\n",
+            "ID: preview1\n",
+            "Name: PureJuice Pro - Pre-order next version\n",
+            "Description: Newest version of the PureJuice Pro wireless charger, coming soon! The newest model of the PureJuice Pro boasts a 2x faster charge than the current model, and a sturdier cable with an eighteen month full warranty. We also have a battery backup to charge on-the-go, up to two full charges. Pre-order yours today!\n",
+            "Price: 36.0\n",
+            "Currency: USD\n",
+            "Plug type: ['B', 'C', 'G']\n",
+            "Voltage: ['230V', '120V']\n",
+            "Score: 1.0668641\n",
+            "\n",
+            "ID: us1\n",
+            "Name: PureJuice Pro\n",
+            "Description: PureJuice Pro: Experience the pinnacle of wireless charging. Blending rapid charging tech with sleek design, it ensures your devices are powered swiftly and safely. The future of charging is here.\n",
+            "Price: 15.0\n",
+            "Currency: USD\n",
+            "Plug type: B\n",
+            "Voltage: 120v\n",
+            "Score: 0.11306982\n",
+            "\n",
+            "ID: uk1\n",
+            "Name: PureJuice Pro - UK Compatible\n",
+            "Description: PureJuice Pro: Redefining wireless charging. Seamlessly merging swift charging capabilities with a refined aesthetic, it guarantees your devices receive rapid and secure power. Welcome to the next generation of charging.\n",
+            "Price: 20.0\n",
+            "Currency: GBP\n",
+            "Plug type: G\n",
+            "Voltage: 230V\n",
+            "Score: 0.11306982\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(index=\"products_index\", query={\n",
         "      \"rule_query\": {\n",
@@ -460,10 +631,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "b78b5bda",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "ObjectApiResponse({'result': 'updated'})"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "client.query_ruleset.put(ruleset_id=\"promotion-rules\", rules=[\n",
         "    {\n",
@@ -535,10 +717,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "id": "b66993ed",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "ID: preview1\n",
+            "Name: PureJuice Pro - Pre-order next version\n",
+            "Description: Newest version of the PureJuice Pro wireless charger, coming soon! The newest model of the PureJuice Pro boasts a 2x faster charge than the current model, and a sturdier cable with an eighteen month full warranty. We also have a battery backup to charge on-the-go, up to two full charges. Pre-order yours today!\n",
+            "Price: 36.0\n",
+            "Currency: USD\n",
+            "Plug type: ['B', 'C', 'G']\n",
+            "Voltage: ['230V', '120V']\n",
+            "Score: 1.7014124e+38\n",
+            "\n",
+            "ID: uk1\n",
+            "Name: PureJuice Pro - UK Compatible\n",
+            "Description: PureJuice Pro: Redefining wireless charging. Seamlessly merging swift charging capabilities with a refined aesthetic, it guarantees your devices receive rapid and secure power. Welcome to the next generation of charging.\n",
+            "Price: 20.0\n",
+            "Currency: GBP\n",
+            "Plug type: G\n",
+            "Voltage: 230V\n",
+            "Score: 1.7014122e+38\n",
+            "\n",
+            "ID: eu1\n",
+            "Name: PureJuice Pro - Wireless Charger suitable for European plugs\n",
+            "Description: PureJuice Pro: Elevating wireless charging. Combining unparalleled charging speeds with elegant design, it promises both rapid and dependable energy for your devices. Embrace the future of wireless charging.\n",
+            "Price: 18.0\n",
+            "Currency: EUR\n",
+            "Plug type: C\n",
+            "Voltage: 230V\n",
+            "Score: 14.5004\n",
+            "\n",
+            "ID: us1\n",
+            "Name: PureJuice Pro\n",
+            "Description: PureJuice Pro: Experience the pinnacle of wireless charging. Blending rapid charging tech with sleek design, it ensures your devices are powered swiftly and safely. The future of charging is here.\n",
+            "Price: 15.0\n",
+            "Currency: USD\n",
+            "Plug type: B\n",
+            "Voltage: 120v\n",
+            "Score: 0.11306982\n"
+          ]
+        }
+      ],
       "source": [
         "response = client.search(index=\"products_index\", query={\n",
         "      \"rule_query\": {\n",
@@ -579,7 +804,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.10.1"
     }
   },
   "nbformat": 4,
