Add summary with links to docs

--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -783,6 +783,14 @@
         "\n",
         "pretty_response(response)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "7e216df3",
+      "metadata": {},
+      "source": [
+        "These examples start to show the power of promoting documents based on contextual query metadata. For more information on how to get started using query rules, check out our [blog post](https://www.elastic.co/blog/introducing-query-rules-elasticsearch-8-10) and [search guide](https://www.elastic.co/guide/en/elasticsearch/reference/current/search-using-query-rules.html)."
+      ]
     }
   ],
   "metadata": {
